assets/scss/_styles_project.scss
/* ... */
// Left sidebar
.td-sidebar-nav {
  overflow: hidden;
  padding: 0px;

  &__section-title {
    a {
      color: $gray-400;
      font-weight: $font-weight-bold;
    }
  }

  .td-sidebar-link {
    &__page {
      color: $gray-400;
      font-weight: $font-weight-light;
    }

    &__section {
      margin-top: 1rem;
      font-family:
        "Qanelas Soft",
        sans-serif,
        -apple-system,
        BlinkMacSystemFont,
        "Segoe UI",
        Roboto,
        "Helvetica Neue",
        Arial,
        "Apple Color Emoji",
        "Segoe UI Emoji",
        "Segoe UI Symbol";
    }
  }

  a {
    &:hover {
      color: $white;
      text-decoration: none;
    }

    &.active:not(.tree-root) {
      border-width: 1px;
      border-style: solid;
      border-image: linear-gradient(to left,
          rgba($dark, 0) 30%,
          rgba($primary, 0.3) 60%,
          $primary 90% 100%) 1;
      background-image: linear-gradient(to left,
          rgba($dark, 0.2) 30%,
          rgba($primary, 0.3) 60%,
          $primary 90% 100%) 1;
      padding: 0.25rem;
      padding-left: 0.5rem !important;
      // background-image: linear-gradient(to left, rgba($dark,.33),rgba($dark,.5),rgba($dark,.75),#1e2117, #31412b, #3b6447, #378b6d, #00b39f);
      // background-color: rgba($primary, .05);
      color: $secondary;
    }

    &.active.tree-root {
      border: 2px solid $lightslategray !important;
      padding: 0.25rem;
      padding-left: 0.5rem !important;
      background-color: rgba($lightslategray, 0.1);
      color: $white;
    }
  }
}

// Right sidebar
.td-sidebar-toc {
  margin-top: 0rem;
  line-height: 1.25rem;
  border-left: 1px solid $border-color;
  background-image: linear-gradient(to top,
      #1e2117,
      #1d1912,
      #18120e,
      #0f0a09,
      #000000);

  @supports (position: sticky) {
    position: sticky;
    top: 5.5rem;
    padding-top: 1rem;
    height: calc(100vh - 5.5rem);
    overflow-y: auto;
  }

  .taxo-categories {
    margin-top: 2rem;
  }
}

.td-page-meta {
  a {
    display: block;
    color: $gray-400;
    line-height: 1.65rem;
    font-weight: $font-weight-medium;

    &:hover {
      color: $white;
      text-decoration: none;
    }
  }

  .td-page-meta--project-issue {
    visibility: hidden;
  }
}

.td-toc {
  margin-top: 2rem;

  #TableOfContents {
    a {
      color: $lightslategray;
      padding: 0.25rem 0.5rem;
      border-radius: 4px;
      transition: background-color 0.2s ease, color 0.2s ease;

      &:hover,
      &:focus-visible {
        color: $white;
        text-decoration: none;
        background-color: rgba($primary, 0.15);
      }
    }
  }
}

// pageinfo
.pageinfo {
  font-weight: $font-weight-medium;
  background: $black;
  font-family: "Open Sans";
  border-style: solid;
  border-color: #00b39f;
}

// front-matter
.matterinfo {
  font-weight: $font-weight-medium;
  background: $black;
  font-family: "Qanelas Soft";
  border-color: #00b39f;
  border-radius: 10px;
}

.heading {
  font-size: 1.2rem;
  color: #00b39f;
}

.matterheader {
  font-size: 1.2rem;
  color: $casper;
}

.matterinfo .plan-support {
  padding: .5rem;
  border: .5px solid $border-color;
  display: flex;
  align-items: center;
  color: $casper;
  &:hover {
    background-color: rgba($primary, 0.3)
  }
}

.matterinfo .plan-support .support-icon {
  width: 20px;
  height: 20px;
  margin-right: 10px;
}

.plan-icon {
  display: inline-block;
}

.tier {
  font-weight: bold;
  padding: 0 5px;
  color: $casper;
}


// Style alert boxes.

.alert {
  font-weight: $font-weight-medium;
  background: $gray-900;
  color: inherit;
  border-radius: 0;

  &.alert-custom {
    background-color: $gray-900;
    border-style: solid;
    border-width: 0 0 0 4px;
  }
}

// Dashboard

.l5btn {
  padding: 1.25rem;
  border-radius: 0.75rem;
  border: 4px solid rgba(0, 179, 159, 0.4);
  background: #000;
  color: $white;
  transition: color 0.8s;
  transition: background-color 0.8s;

  >img {
    width: 2rem;
    margin-right: 0.5rem;
  }

  >img:hover {
    filter: brightness(0) invert(1);
  }

  @media (max-width: 768px) {
    width: 277px;
  }
}

.td-content figure,
.td-content figure {
  width: max-content;
  max-width: clamp(320px, 100%, 700px);
  margin: 0 auto 2rem auto;
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.td-content figure > img {
  width: auto;
  max-width: 100%;
  border-radius: .5rem .5rem 0 0;
  box-shadow: 0 0 0.5rem rgba(0, 179, 159, 0.4);
  transition: box-shadow 0.2s;
}

.td-content figure > figcaption {
  width: 100%;
  text-align: center;
  padding: 0.5rem 1rem;
  background-color: rgba($lightslategray, 1);
  color: $dark;
  border-radius: 0 0 .5rem .5rem;
  box-sizing: border-box;
}

.dashboard {
  font-weight: 800;
  margin-bottom: 4rem;
  font-size: 5rem;
  text-align: left;
  background-image: 
    linear-gradient(to right, rgba(255, 255, 255, .9) 0px, rgb(0, 211, 169) 34%, rgb(235, 192, 23) 71%, rgb(255,243,197) 100%);
  background-position:
    0% 0%,
    0% 0%;
  background-size: 200%;
  box-sizing: auto;
  color: transparent;
  display: block;
  text-rendering: optimizelegibility;
  background-clip: text;
  -webkit-background-clip: text;
  animation: color-shift 8s linear infinite;

  @media (max-width: 768px) {
    font-size: 4rem;
  }

  @media (max-width: 768px) {
    font-size: 3rem;
    text-align: center;
  }
}

@keyframes color-shift {
  to {
    background-position: -200%;
  }
}
/* ... */

